# AG_Freeverb_Room

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  installer.iss  installer.sed  setup.bat
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AllpassFilter.h  DelayLine.h  EarlyReflections.h  Filters.h  LFO.h  LateReverb.h
Source/UI/: CyberpunkLookAndFeel.h  LookAndFeel.h
Tests/: DSPTests.cpp  DelayLineTests.cpp  EngineTests.cpp  TestRunner.cpp
